다국어 수정 - 모바일스토어